FIx styling on mobile for project page

--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   padding: 64px;
   width: 600px;
-  min-width: 400px;
+  min-width: 300px;
 }
 
 .titleContainer {
@@ -48,4 +48,10 @@
 
 .data {
   color: #5422ee;
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 32px;
+  }
 }
